--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,9 @@
   <groupId>spockpv</groupId>
   <artifactId>sudoku</artifactId>
   <version>1.0-SNAPSHOT</version>
-
   <name>sudoku</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+
+  <packaging>jar</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -63,7 +62,14 @@
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <!-- Jar file entry point -->
+                <mainClass>spockpv.Sudoku</mainClass>
+              </manifest>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
